Release notes for xmlBlaster (http://www.xmlBlaster.org)
The "#99999" numbers are Subversion revision numbers.

Changes for current svn
=======================

 o #14486 Runlevel manager: Added create attribute <plugin id='SOCKET' create='true' ...>
   The new create attribute allows to suppress loading a plugin from xmlBlasterPlugins.xml

 o #14486,#14500,#14501 Added extended support to send internal core events.
   Example: startupRunlevel.9,shutdownRunlevel.8 where the number
   is the runlevel you want to observe.
   See: http://www.xmlblaster.org/xmlBlaster/doc/requirements/admin.events.html

 o #14481 Added native plugin to trigger xmlBlaster internal events as emails
   Currently log.error or/and log.warning, see EventPlugin in xmlBlasterPlugins.xml

 o #14438,#14439 C++-client library: size_t, int64_t cleanup

 o #14437 C-client library: size_t, int64_t cleanup

 o #14436 Removed obsolete jndi-jdk1_3_1.jar

 o #14429 Email protocol
   Bugfix for loop protection
   Changed configuration defaults to be human readable
   Changed holdbackExpireTimeout default to 20000 milli seconds


Changes for 1.1 [2005-12-22] #14429 "Xmas release"
==================================================

 o #14422 Changed ClusterManager to be configured in xmlBlasterPlugins.xml
   Please update xmlBlasterPlugins.xml
   Removed the now obsolete '-cluster true' parameter.
   Changed protocol plugins to startup in runlevel 4 instead of 3

 o #14419 Fixed reflection code for JDK 1.5 in XML dom.write()

 o #14412 C client library: Changed responseTimeout from one minute to unlimited

 o #14408 Removed parser.jar and jaxp.jar as we dropped support for JDK 1.3
   Removed collections.jar (needed for JDK 1.1)

 o #14379 added DbWriter: see http://www.xmlblaster.org/xmlBlaster/doc/requirements/contrib.dbwriter.html

 o #14354 XmlBlaster native (jutils #14357) logging:
   Added '-maxLogFileLines 50000 -maxLogFileCounter 9' configuration
